feat(admin): add auth middleware
